# snake

./: CMakeLists.txt  Coordinate.cpp  README.md  a_star.cpp  a_star.h  grid.h  grid_point.h  server.cpp  snake.yaml  snake_game.cpp  snake_gui.py  snake_ia.cpp  snake_ia.cpp.autosave
client_template/: CMakeLists.txt  snake.cpp  snake.cpp.autosave
include/: snake_game.h
include/duels/snake/: Coordinate.h  a_star.h  game.h  grid.h  grid_point.h  msg.h  snake_game.h  snake_ia.h  vector2d.h
